--- a/kinsmen.html
+++ b/kinsmen.html
@@ -320,21 +320,21 @@
                 </svg>
                 <div data-dsn-ajax="img" class="p-absolute dsn-hero-parallax-img transform-3d bg-container over-hidden"
                     data-overlay="4">
-                    <img class="cover-bg-img wp-post-image" src="assets/img/portfolio/project2/1.jpg" alt=""
-                        data-dsn-position="50% 50%" />
+                    <img class="cover-bg-img wp-post-image" src="assets/img/portfolio/project4/dp-big--portfolio-97.jpg"
+                        alt="" data-dsn-position="50% 50%" />
                 </div>
                 <div class="dsn-container dsn-z-index-2 p-relative h-100 v-dark-head">
                     <div class="p-relative h-100 d-flex flex-column justify-content-center">
                         <div class="intro-project w-100">
                             <div class="intro-title text-center">
                                 <div class="metas has-separate p-relative mb-10">
-                                    <span>Creative</span>
-                                    <span>Photography</span>
+                                    <span>Print</span>
+                                    <span>Branding</span>
                                 </div>
 
                                 <div class="hero-title fill-text">
-                                    <a href="project-2.html" class="d-inline-block " data-dsn-ajax="next">
-                                        <h2 class="title">MEN FASHION</h2>
+                                    <a href="cafe-diario.html" class="d-inline-block " data-dsn-ajax="next">
+                                        <h2 class="title">Cafe Diario</h2>
                                     </a>
                                 </div>
                             </div>
