--- a/muscle-rehab.html
+++ b/muscle-rehab.html
@@ -288,7 +288,8 @@
                 </svg>
                 <div data-dsn-ajax="img" class="p-absolute dsn-hero-parallax-img transform-3d bg-container over-hidden"
                     data-overlay="4">
-                    <img class="cover-bg-img wp-post-image" src="assets/img/portfolio/project5/six-ways02.jpg" alt=""
+                    <img class="cover-bg-img wp-post-image"
+                        src="assets/img/portfolio/project1/dp-big--portfolio-117.jpg" alt=""
                         data-dsn-position="50% 50%" />
                 </div>
                 <div class="dsn-container dsn-z-index-2 p-relative h-100 v-dark-head">
@@ -296,12 +297,12 @@
                         <div class="intro-project w-100">
                             <div class="intro-title text-center">
                                 <div class="metas has-separate p-relative mb-10">
-                                    <span>Print</span>
+                                    <span>Digital</span>
                                     <!-- <span>Photography</span> -->
                                 </div>
 
                                 <div class="hero-title fill-text">
-                                    <a href="active.html" class="d-inline-block " data-dsn-ajax="next">
+                                    <a href="patco.html" class="d-inline-block " data-dsn-ajax="next">
                                         <h2 class="title">PATCO Machine & Fab. Inc.</h2>
                                     </a>
                                 </div>
