--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                             </div>
                         </div>
                         <div class="box-img">
-                            <img decoding="async" class="cover-bg-img" src="assets/img/main-image.png" title="" alt="">
+                            <img decoding="async" class="cover-bg-img" src="assets/img/main-image.jpg" title="" alt="">
                         </div>
                     </div>
                     <!-- <div class="p-relative box-img-bottom hv-50">
