updated image names

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                     <div class="slide-item swiper-slide over-hidden">
                                         <div class="image-bg cover-bg w-100 before-z-index" data-overlay="1">
                                             <img class="cover-bg-img dsn-swiper-parallax-transform"
-                                                src="./assets/img/portfolio/project6/1.jpg" alt=""
+                                                src="./assets/img/portfolio/project6/muscle-rehab-hero.jpg" alt=""
                                                 data-dsn-position="50% 50%" />
                                         </div>
                                         <div class="slide-content p-absolute">
@@ -165,7 +165,7 @@
                                     <div class="slide-item swiper-slide over-hidden">
                                         <div class="image-bg cover-bg w-100 h-100 before-z-index" data-overlay="3">
                                             <img class="cover-bg-img dsn-swiper-parallax-transform"
-                                                src="assets/img/portfolio/project5/1.jpg" alt=""
+                                                src="assets/img/portfolio/project5/six-ways-hero.jpg" alt=""
                                                 data-dsn-position="50% 50%" />
                                         </div>
                                         <div class="slide-content p-absolute">
@@ -764,7 +764,8 @@
                                                         <div class="box-image-bg before-z-index dsn-swiper-parallax-transform"
                                                             data-overlay="4">
                                                             <img class="cover-bg-img"
-                                                                src="assets/img/portfolio/project6/1.jpg" alt="" />
+                                                                src="assets/img/portfolio/project6/muscle-rehab-hero.jpg"
+                                                                alt="" />
                                                         </div>
                                                     </a>
                                                     <div
@@ -812,7 +813,8 @@
                                                         <div class="box-image-bg before-z-index dsn-swiper-parallax-transform"
                                                             data-overlay="3">
                                                             <img class="cover-bg-img"
-                                                                src="assets/img/portfolio/project5/1.jpg" alt="" />
+                                                                src="assets/img/portfolio/project5/six-ways-hero.jpg"
+                                                                alt="" />
                                                         </div>
                                                     </a>
                                                     <div
