--- a/muscle-rehab.html
+++ b/muscle-rehab.html
@@ -121,8 +121,8 @@
                 <div id="hero_image"
                     class="p-absolute dsn-hero-parallax-img over-hidden before-z-index z-index-1 full-width"
                     data-dsn-ajax="img" data-overlay="4">
-                    <img src="./assets/img/portfolio/project6/1.jpg" class="cover-bg-img transform-3d " alt=""
-                        data-dsn-position="50% 50%" sizes="(max-width: 2560px) 100vw, 2560px" />
+                    <img src="./assets/img/portfolio/project6/muscle-rehab-hero.jpg" class="cover-bg-img transform-3d "
+                        alt="" data-dsn-position="50% 50%" sizes="(max-width: 2560px) 100vw, 2560px" />
                 </div>
                 <div id="hero_content"
                     class="d-flex p-relative h-100 dsn-hero-parallax-title align-items-end container">
