--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                     <div class="slide-item swiper-slide over-hidden">
                                         <div class="image-bg cover-bg w-100 h-100 before-z-index" data-overlay="2">
                                             <img class="cover-bg-img dsn-swiper-parallax-transform"
-                                                src="assets/img/portfolio/project4/1.jpg" alt=""
+                                                src="assets/img/portfolio/project4/cafe-diario-hero.jpg" alt=""
                                                 data-dsn-position="50% 50%" />
                                         </div>
                                         <div class="slide-content p-absolute">
@@ -860,7 +860,8 @@
                                                         <div class="box-image-bg before-z-index dsn-swiper-parallax-transform"
                                                             data-overlay="2">
                                                             <img class="cover-bg-img"
-                                                                src="assets/img/portfolio/project4/1.jpg" alt="" />
+                                                                src="assets/img/portfolio/project4/cafe-diario-hero.jpg"
+                                                                alt="" />
                                                         </div>
                                                     </a>
                                                     <div
