--- a/work-card-1.html
+++ b/work-card-1.html
@@ -282,8 +282,8 @@
                                         title="OPEN RUN">
                                         <div class="box-image-bg before-z-index dsn-swiper-parallax-transform"
                                             data-overlay="2">
-                                            <img class="cover-bg-img" src="assets/img/portfolio/project4/1.jpg"
-                                                alt="" />
+                                            <img class="cover-bg-img"
+                                                src="assets/img/portfolio/project4/cafe-diario-hero.jpg" alt="" />
                                         </div>
                                     </a>
                                     <div class="post-content dsn-bg p-relative z-index-1 d-flex flex-column">
