--- a/active.html
+++ b/active.html
@@ -121,7 +121,7 @@
             <div class="entry-header p-relative over-hidden">
                 <div class="p-absolute dsn-hero-parallax-img over-hidden before-z-index z-index-1 full-width"
                     id="hero_image" data-dsn-ajax="img" data-overlay="2">
-                    <img class="cover-bg-img transform-3d" src="assets/img/portfolio/project4/cafe-diario-hero.jpg"
+                    <img class="cover-bg-img transform-3d" src="assets/img/portfolio/project4/cafe-diario-hero.webp"
                         alt="" />
                 </div>
 
