--- a/work-classic-1.html
+++ b/work-classic-1.html
@@ -258,7 +258,7 @@
                                         <div class="box-image-bg before-z-index dsn-swiper-parallax-transform"
                                             data-overlay="2">
                                             <img class="cover-bg-img"
-                                                src="assets/img/portfolio/project4/cafe-diario-hero.jpg" alt="" />
+                                                src="assets/img/portfolio/project4/cafe-diario-hero.webp" alt="" />
                                         </div>
                                     </a>
                                     <div class="post-content dsn-bg p-relative z-index-1 d-flex flex-column">
