--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                     <div class="slide-item swiper-slide over-hidden">
                                         <div class="image-bg cover-bg w-100 before-z-index" data-overlay="1">
                                             <img class="cover-bg-img dsn-swiper-parallax-transform"
-                                                src="./assets/img/portfolio/project6/muscle-rehab-hero.jpg" alt=""
+                                                src="./assets/img/portfolio/project6/muscle-rehab-hero.webp" alt=""
                                                 data-dsn-position="50% 50%" />
                                         </div>
                                         <div class="slide-content p-absolute">
@@ -165,7 +165,7 @@
                                     <div class="slide-item swiper-slide over-hidden">
                                         <div class="image-bg cover-bg w-100 h-100 before-z-index" data-overlay="3">
                                             <img class="cover-bg-img dsn-swiper-parallax-transform"
-                                                src="assets/img/portfolio/project5/six-ways-hero.jpg" alt=""
+                                                src="assets/img/portfolio/project5/six-ways-hero.webp" alt=""
                                                 data-dsn-position="50% 50%" />
                                         </div>
                                         <div class="slide-content p-absolute">
@@ -205,7 +205,7 @@
                                     <div class="slide-item swiper-slide over-hidden">
                                         <div class="image-bg cover-bg w-100 h-100 before-z-index" data-overlay="2">
                                             <img class="cover-bg-img dsn-swiper-parallax-transform"
-                                                src="assets/img/portfolio/project4/cafe-diario-hero.jpg" alt=""
+                                                src="assets/img/portfolio/project4/cafe-diario-hero.webp" alt=""
                                                 data-dsn-position="50% 50%" />
                                         </div>
                                         <div class="slide-content p-absolute">
@@ -428,7 +428,7 @@
                             </div>
                         </div>
                         <div class="box-img">
-                            <img decoding="async" class="cover-bg-img" src="assets/img/main-image.jpg" title="" alt="">
+                            <img decoding="async" class="cover-bg-img" src="assets/img/main-image.webp" title="" alt="">
                         </div>
                     </div>
                     <!-- <div class="p-relative box-img-bottom hv-50">
@@ -764,7 +764,7 @@
                                                         <div class="box-image-bg before-z-index dsn-swiper-parallax-transform"
                                                             data-overlay="4">
                                                             <img class="cover-bg-img"
-                                                                src="assets/img/portfolio/project6/muscle-rehab-hero.jpg"
+                                                                src="assets/img/portfolio/project6/muscle-rehab-hero.webp"
                                                                 alt="" />
                                                         </div>
                                                     </a>
@@ -813,7 +813,7 @@
                                                         <div class="box-image-bg before-z-index dsn-swiper-parallax-transform"
                                                             data-overlay="3">
                                                             <img class="cover-bg-img"
-                                                                src="assets/img/portfolio/project5/six-ways-hero.jpg"
+                                                                src="assets/img/portfolio/project5/six-ways-hero.webp"
                                                                 alt="" />
                                                         </div>
                                                     </a>
@@ -860,7 +860,7 @@
                                                         <div class="box-image-bg before-z-index dsn-swiper-parallax-transform"
                                                             data-overlay="2">
                                                             <img class="cover-bg-img"
-                                                                src="assets/img/portfolio/project4/cafe-diario-hero.jpg"
+                                                                src="assets/img/portfolio/project4/cafe-diario-hero.webp"
                                                                 alt="" />
                                                         </div>
                                                     </a>
