--- a/muscle-rehab.html
+++ b/muscle-rehab.html
@@ -121,7 +121,7 @@
                 <div id="hero_image"
                     class="p-absolute dsn-hero-parallax-img over-hidden before-z-index z-index-1 full-width"
                     data-dsn-ajax="img" data-overlay="4">
-                    <img src="./assets/img/portfolio/project6/muscle-rehab-hero.jpg" class="cover-bg-img transform-3d "
+                    <img src="./assets/img/portfolio/project6/muscle-rehab-hero.webp" class="cover-bg-img transform-3d "
                         alt="" data-dsn-position="50% 50%" sizes="(max-width: 2560px) 100vw, 2560px" />
                 </div>
                 <div id="hero_content"
