--- a/enfusia.html
+++ b/enfusia.html
@@ -192,10 +192,10 @@
                     data-dsn-grid="move-up">
 
                     <div class="effect-popup before-z-index h-100"
-                        data-src="assets/img/portfolio/project2/dp-big--portfolio-131.jpg" data-caption="OpenRun pro"
+                        data-src="assets/img/portfolio/project2/dp-big--portfolio-131.webp" data-caption="OpenRun pro"
                         data-fancybox="_1" data-cursor="open" data-dsn-overlay="0">
                         <img class="cover-bg-img has-direction"
-                            src="assets/img/portfolio/project2/dp-big--portfolio-131.jpg" data-dsn-position="50% 50%"
+                            src="assets/img/portfolio/project2/dp-big--portfolio-131.webp" data-dsn-position="50% 50%"
                             alt="" />
                     </div>
                     <div class="cap"><span>OpenRun pro</span></div>
