--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                                     <div class="slide-item swiper-slide over-hidden">
                                         <div class="image-bg cover-bg w-100 h-100 before-z-index" data-overlay="4">
                                             <img class="cover-bg-img dsn-swiper-parallax-transform"
-                                                src="assets/img/portfolio/project2/dp-big--portfolio-131.jpg" alt=""
+                                                src="assets/img/portfolio/project2/dp-big--portfolio-131.webp" alt=""
                                                 data-dsn-position="50% 50%" />
                                         </div>
                                         <div class="slide-content p-absolute">
@@ -326,7 +326,7 @@
                                     <div class="slide-item swiper-slide over-hidden">
                                         <div class="image-bg cover-bg w-100 h-100 before-z-index" data-overlay="4">
                                             <img class="cover-bg-img dsn-swiper-parallax-transform"
-                                                src="assets/img/portfolio/project1/dp-big--portfolio-103.jpg" alt=""
+                                                src="assets/img/portfolio/project1/dp-big--portfolio-103.webp" alt=""
                                                 data-dsn-position="50% 50%" />
                                         </div>
                                         <div class="slide-content p-absolute">
@@ -953,7 +953,7 @@
                                                         <div class="box-image-bg before-z-index dsn-swiper-parallax-transform"
                                                             data-overlay="4">
                                                             <img class="cover-bg-img"
-                                                                src="assets/img/portfolio/project2/dp-big--portfolio-131.jpg"
+                                                                src="assets/img/portfolio/project2/dp-big--portfolio-131.webp"
                                                                 alt="" />
                                                         </div>
                                                     </a>
@@ -999,7 +999,7 @@
                                                         <div class="box-image-bg before-z-index dsn-swiper-parallax-transform"
                                                             data-overlay="4">
                                                             <img class="cover-bg-img"
-                                                                src="assets/img/portfolio/project1/dp-big--portfolio-103.jpg"
+                                                                src="assets/img/portfolio/project1/dp-big--portfolio-103.webp"
                                                                 alt="" />
                                                         </div>
                                                     </a>
