--- a/patco.html
+++ b/patco.html
@@ -237,9 +237,9 @@
                 <div class="d-grid grid-sm-2 align-items-center" data-dsn-gap="80px 40px">
                     <div class="p-relative img-box-parallax before-z-index has-popup" data-dsn="parallax">
                         <div class="effect-popup before-z-index h-v-80"
-                            data-src="assets/img/portfolio/project1/dp-big--portfolio-103.jpg" data-caption="Caption #2"
-                            data-fancybox="_1" data-cursor="open" data-dsn-overlay="0">
-                            <img class="cover-bg-img" src="assets/img/portfolio/project1/dp-big--portfolio-103.jpg"
+                            data-src="assets/img/portfolio/project1/dp-big--portfolio-103.webp"
+                            data-caption="Caption #2" data-fancybox="_1" data-cursor="open" data-dsn-overlay="0">
+                            <img class="cover-bg-img" src="assets/img/portfolio/project1/dp-big--portfolio-103.webp"
                                 alt="">
                         </div>
                         <!-- <div class="cap">
