--- a/portfolio.html
+++ b/portfolio.html
@@ -334,7 +334,7 @@
                                                 <div class="box-image-bg before-z-index dsn-swiper-parallax-transform"
                                                     data-overlay="4">
                                                     <img class="cover-bg-img"
-                                                        src="assets/img/portfolio/project2/dp-big--portfolio-131.jpg"
+                                                        src="assets/img/portfolio/project2/dp-big--portfolio-131.webp"
                                                         alt="" />
                                                 </div>
                                             </a>
@@ -372,7 +372,7 @@
                                                 <div class="box-image-bg before-z-index dsn-swiper-parallax-transform"
                                                     data-overlay="4">
                                                     <img class="cover-bg-img"
-                                                        src="assets/img/portfolio/project1/dp-big--portfolio-103.jpg"
+                                                        src="assets/img/portfolio/project1/dp-big--portfolio-103.webp"
                                                         alt="" />
                                                 </div>
                                             </a>
