--- a/graphic-design-is-important.html
+++ b/graphic-design-is-important.html
@@ -12,7 +12,7 @@
     <title>Your business needs graphic design more than you realize. | Abstract</title>
 
     <link href="assets/css/plugins.css" rel="stylesheet" />
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.min.css">
 
 </head>
 
