--- a/about-us.html
+++ b/about-us.html
@@ -12,7 +12,7 @@
     <title>About Us | Abstract</title>
 
     <link href="assets/css/plugins.css" rel="stylesheet" />
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.min.css">
 
 </head>
 
