--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Home | Abstract</title>
 
     <link href="assets/css/plugins.css" rel="stylesheet" />
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 
 <body class="dsn-ajax">
