--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <title>Portfolio | Abstract</title>
 
     <link href="assets/css/plugins.css" rel="stylesheet" />
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 
 <body class="bg-dots dsn-ajax dsn-cursor-effect ">
