--- a/kinsmen.html
+++ b/kinsmen.html
@@ -12,7 +12,7 @@
     <title>Kinsmen Group | Abstract</title>
 
     <link href="assets/css/plugins.css" rel="stylesheet" />
-    <link rel="stylesheet" href="assets/css/style.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body class="v-light dsn-ajax">
