--- a/silestone-web.html
+++ b/silestone-web.html
@@ -13,7 +13,7 @@
     <title>MEN FASHION | Abstract</title>
 
     <link href="assets/css/plugins.css" rel="stylesheet" />
-    <link rel="stylesheet" href="assets/css/style.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body class="v-light dsn-ajax">
