--- a/graphic-design-is-important.html
+++ b/graphic-design-is-important.html
@@ -123,7 +123,7 @@
                 <div id="hero_image"
                     class="p-absolute dsn-hero-parallax-img over-hidden before-z-index z-index-1 full-width"
                     data-dsn-ajax="img" data-overlay="6">
-                    <img src="assets/img/blog/3.jpg" class="cover-bg-img transform-3d " alt=""
+                    <img src="assets/img/blog/graphic-design.jpg" class="cover-bg-img transform-3d " alt=""
                         data-dsn-position="50% 50%" sizes="(max-width: 2560px) 100vw, 2560px" />
                 </div>
                 <div id="hero_content"
@@ -233,11 +233,10 @@
 
                                 <div
                                     class="pagination-post d-flex align-items-center border-style border-radius mt-section">
-                                    <div class="pagination-item w-100 p-20"><a
-                                            href="index.html2024/06/11/create-the-bestworkplace/"><span
+                                    <div class="pagination-item w-100 p-20"><a href="what-is-rebranding.html"><span
                                                 class="mb-5">PREVIOUS</span>
-                                            <h4 class="title-block word-wrap">Create the
-                                                bestworkplace</h4>
+                                            <h4 class="title-block word-wrap">What is rebranding, and when is it to be
+                                                used?</h4>
                                         </a></div>
 
                                     <div class="icon p-20 border-right border-left">
@@ -246,10 +245,9 @@
                                         </a>
                                     </div>
                                     <div class="pagination-item w-100 p-20 text-right"><a
-                                            href="index.html2024/06/11/soul-artwork-from-lizzy/"><span
-                                                class="mb-5">NEXT</span>
-                                            <h4 class="title-block word-wrap">Soul Artwork from
-                                                Lizzy</h4>
+                                            href="graphic-design-is-important.html"><span class="mb-5">NEXT</span>
+                                            <h4 class="title-block word-wrap">Your business needs Graphic Design more
+                                                than you realize</h4>
                                         </a></div>
                                 </div>
                             </div>
