--- a/stories.html
+++ b/stories.html
@@ -179,7 +179,7 @@
                 <article class="blog-item p-relative pt-50 pb-50 border-bottom">
                     <div class="blog-item-inner p-relative">
                         <div class="left-box">
-                            <a href="single-post.html" class=" word-wrap" rel="bookmark">
+                            <a href="what-is-rebranding.html" class=" word-wrap" rel="bookmark">
                                 <h4 class="title-block">What is rebranding, and when is it to be used?</h4>
                             </a>
 
