--- a/what-is-rebranding.html
+++ b/what-is-rebranding.html
@@ -226,6 +226,9 @@
                                         If you want the best solutions for your business and the best graphic design
                                         services in Houston, TX, click on the link below.
                                     </p>
+                                    <a href="get-a-quote.html" class=" word-wrap" rel="bookmark">
+                                        <h4 class="title-block">Get a Quote</h4>
+                                    </a>
 
                                     <!-- <div class="post-tags p-relative">
                                     <a class="fz-16"
