--- a/how-we-work.html
+++ b/how-we-work.html
@@ -518,7 +518,7 @@
                                             <a href="portfolio.html" class="">PORTFOLIO</a>
                                         </li>
                                         <li class="menu-item">
-                                            <a href="stories.html" class="">Stories</a>
+                                            <a href="stories.html" class="">STORIES</a>
                                         </li>
                                         <li class="menu-item">
                                             <a href="about-us.html" class="">ABOUT</a>
