--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
                         <div class="nav-social-inner p-relative">
                             <h5 class="sm-title-block mb-10">Follow us</h5>
                             <ul style="--dsn-li-name: dsn6;">
-                                <li style="--dsn-li-index: 1;"><a href="#0" target="_blank"
-                                        rel="nofollow noopener noreferrer">Behance.</a></li>
-                                <li style="--dsn-li-index: 3;"><a href="#0" target="_blank"
-                                        rel="nofollow noopener noreferrer">Twitter.</a></li>
+                                <li style="--dsn-li-index: 1;"><a href="https://www.facebook.com/AbstractCreative"
+                                        target="_blank" rel="nofollow noopener noreferrer">Facebook</a></li>
+                                <li style="--dsn-li-index: 3;"><a href="https://www.instagram.com/abstr8ct/"
+                                        target="_blank" rel="nofollow noopener noreferrer">Instagram</a></li>
                             </ul>
                         </div>
                     </div>
