--- a/enfusia.html
+++ b/enfusia.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="assets/img/favicon.png" sizes="32x32" />
     <link rel="icon" href="assets/img/favicon.png" sizes="192x192" />
 
-    <title>Enfusia| Abstract</title>
+    <title>Enfusia| Abstract Creative</title>
 
     <link href="assets/css/plugins.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/style.css">
@@ -26,8 +26,8 @@
             <div class="main-logo">
                 <a href="index.html" data-dsn-text="ABSTRACT CREATIVE" class="custom-logo-link main-brand " rel="home"
                     aria-current="page">
-                    <img src="assets/img/logo-light.png" class="custom-logo logo-light" alt="Blackdsn" />
-                    <img src="assets/img/logo.png" class="custom-logo logo-dark" alt="Blackdsn" />
+                    <img src="assets/img/logo-light.png" class="custom-logo logo-light" alt="Abstract Creative" />
+                    <img src="assets/img/logo.png" class="custom-logo logo-dark" alt="Abstract Creative" />
                 </a>
             </div>
             <nav class="main-navigation ">
