--- a/what-we-do.html
+++ b/what-we-do.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="assets/img/favicon.png" sizes="32x32" />
     <link rel="icon" href="assets/img/favicon.png" sizes="192x192" />
 
-    <title>WHAT WE DO | Abstract</title>
+    <title>WHAT WE DO | Abstract Creative</title>
 
     <link href="assets/css/plugins.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/style.css">
@@ -26,8 +26,8 @@
             <div class="main-logo">
                 <a href="index.html" data-dsn-text="ABSTRACT CREATIVE" class="custom-logo-link main-brand " rel="home"
                     aria-current="page">
-                    <img src="assets/img/logo-light.png" class="custom-logo logo-light" alt="Blackdsn" />
-                    <img src="assets/img/logo.png" class="custom-logo logo-dark" alt="Blackdsn" />
+                    <img src="assets/img/logo-light.png" class="custom-logo logo-light" alt="Abstract Creative" />
+                    <img src="assets/img/logo.png" class="custom-logo logo-dark" alt="Abstract Creative" />
                 </a>
             </div>
             <nav class="main-navigation ">
@@ -610,9 +610,9 @@
                                         <a href="index.html" data-dsn-text="ABSTRACT CREATIVE"
                                             class="custom-logo-link main-brand " rel="home">
                                             <img class="custom-logo logo-light" src="assets/img/logo-light.png"
-                                                alt="Blackdsn" />
+                                                alt="Abstract Creative" />
                                             <img class="custom-logo logo-dark" src="assets/img/logo.png"
-                                                alt="Blackdsn" />
+                                                alt="Abstract Creative" />
                                         </a>
                                     </div>
                                 </div>
