--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body class="bg-dots dsn-ajax dsn-cursor-effect ">
+<body class="bg-dots dsn-cursor-effect ">
 
     <main id="main_root" class="main-root">
         <!-- ========== Menu ========== -->
