--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body class="v-dark bg-dots dsn-ajax">
+<body class="v-dark bg-dots">
 
 
     <main id="main_root" class="main-root">
