--- a/work-card-2.html
+++ b/work-card-2.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body class="v-light dsn-ajax dsn-cursor-effect bg-dots">
+<body class="v-light dsn-cursor-effect bg-dots">
 
 
     <main id="main_root" class="main-root">
