--- a/what-we-do.html
+++ b/what-we-do.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body class="v-light bg-dots dsn-ajax">
+<body class="v-light bg-dots">
 
 
     <main id="main_root" class="main-root">
