--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body class="dsn-ajax">
+<body class="">
 
     <main id="main_root" class="main-root">
 
